// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPopover should render correctly 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <span
    className="bpk-popover__label"
    id="bpk-popover-label-my-popover"
  >
    My popover
  </span>
  <div
    className="bpk-popover__body--padded"
  >
    My popover content
  </div>
  <footer
    className="bpk-popover__footer"
  >
    <button
      className="bpk-link"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </footer>
</section>
`;

exports[`BpkPopover should render correctly with "className" attribute 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover my-custom-class"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <span
    className="bpk-popover__label"
    id="bpk-popover-label-my-popover"
  >
    My popover
  </span>
  <div
    className="bpk-popover__body--padded"
  >
    My popover content
  </div>
  <footer
    className="bpk-popover__footer"
  >
    <button
      className="bpk-link"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </footer>
</section>
`;

exports[`BpkPopover should render correctly with "labelAsTitle" attribute 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <header
    className="bpk-popover__header"
  >
    <h2
      className="bpk-popover__heading"
      id="bpk-popover-label-my-popover"
    >
      My popover
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-popover__close-button"
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.8 12l4.9-4.9c.4-.4.4-1 0-1.4l-1.4-1.4c-.4-.4-1-.4-1.4 0L12 9.2l-4.9-5c-.4-.4-1-.4-1.4 0L4.2 5.6c-.4.4-.4 1 0 1.4l5 5-4.9 4.9c-.4.4-.4 1 0 1.4l1.4 1.4c.4.4 1 .4 1.4 0l4.9-4.9 4.9 4.9c.4.4 1 .4 1.4 0l1.4-1.4c.4-.4.4-1 0-1.4L14.8 12z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-popover__body--padded"
  >
    My popover content
  </div>
</section>
`;

exports[`BpkPopover should render correctly with "padded" attribute equal to false 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <span
    className="bpk-popover__label"
    id="bpk-popover-label-my-popover"
  >
    My popover
  </span>
  <div
    className=""
  >
    My popover content
  </div>
  <footer
    className="bpk-popover__footer"
  >
    <button
      className="bpk-link"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </footer>
</section>
`;
